--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Egg Hunt 2</string>
     <string name="put_egg">Put egg</string>
     <string name="cancel_hunt">Cancel hunt</string>
-    <string name="done_hunting">Done hunting</string>
+    <string name="done_hiding">Done hiding</string>
+    <string name="eggs_counter">Eggs to find:</string>
 </resources>
